--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmadatif23.github.io/word-editor",
+  "homepage": "http://ahmadatif23.github.io/word-editor/",
   "name": "word-editor",
   "version": "0.1.0",
   "private": true,
